--- a/SignalR.NServiceBus.Backplane/SignalR.NServiceBus.Backplane.csproj
+++ b/SignalR.NServiceBus.Backplane/SignalR.NServiceBus.Backplane.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5522B70E-6A0D-4C01-91C0-D264E22E2908}</ProjectGuid>
+    <ProjectGuid>{CCF38BC5-F0D8-4936-BB57-FF65D0FA008D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SignalR.NServiceBus.BackplaneService</RootNamespace>
-    <AssemblyName>SignalR.NServiceBus.BackplaneService</AssemblyName>
+    <RootNamespace>SignalR.NServiceBus.Backplane</RootNamespace>
+    <AssemblyName>SignalR.NServiceBus.Backplane</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -37,9 +37,6 @@
     <Reference Include="NServiceBus.Core">
       <HintPath>..\packages\NServiceBus.4.4.0\lib\net40\NServiceBus.Core.dll</HintPath>
     </Reference>
-    <Reference Include="NServiceBus.Host">
-      <HintPath>..\packages\NServiceBus.Host.4.4.0\lib\net40\NServiceBus.Host.exe</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,18 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EndpointConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalRMessageDispatcher.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SignalR.NServiceBus.Backplane\SignalR.NServiceBus.Backplane.csproj">
-      <Project>{ccf38bc5-f0d8-4936-bb57-ff65d0fa008d}</Project>
-      <Name>SignalR.NServiceBus.Backplane</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SignalR.NServiceBus.Messages\SignalR.NServiceBus.Messages.csproj">
       <Project>{cc67e566-da4a-430f-95ad-b13b133c72ef}</Project>
       <Name>SignalR.NServiceBus.Messages</Name>
@@ -81,8 +73,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <PropertyGroup>
-    <StartAction>Program</StartAction>
-    <StartProgram>$(ProjectDir)$(OutputPath)NServiceBus.Host.exe</StartProgram>
-  </PropertyGroup>
 </Project>
