Using IIS Express

--- a/DemoWebApp/DemoWebApp.csproj
+++ b/DemoWebApp/DemoWebApp.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>DemoWebApp</RootNamespace>
     <AssemblyName>DemoWebApp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -150,7 +150,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>1394</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/DemoWebApp</IISUrl>
+          <IISUrl>http://localhost:1394/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
