--- a/SignalR.NServiceBus.BackplaneService/App.config
+++ b/SignalR.NServiceBus.BackplaneService/App.config
@@ -29,4 +29,16 @@
   <!--<AuditConfig 
     QueueName="The address to which messages received will be forwarded."
     OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <!--<AuditConfig 
+    QueueName="The address to which messages received will be forwarded."
+    OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
+  <AuditConfig QueueName="audit" />
 </configuration>
