--- a/SignalR.NServiceBus.BackplaneService/App.config
+++ b/SignalR.NServiceBus.BackplaneService/App.config
@@ -4,7 +4,11 @@
     <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
     <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
     <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
+    <section name="Logging" type="NServiceBus.Config.Logging, NServiceBus.Core" />
   </configSections>
+
+  <Logging Threshold="Debug" />
+  
   <!--<MessageForwardingInCaseOfFaultConfig 
     ErrorQueue="The queue to which errors will be forwarded." />-->
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
