--- a/SignalR.NServiceBus/packages.config
+++ b/SignalR.NServiceBus/packages.config
@@ -5,9 +5,9 @@
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="3.0.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="NServiceBus" version="5.2.9" targetFramework="net45" />
   <package id="NServiceBus.Host" version="6.0.0" targetFramework="net45" />
