--- a/SignalR.NServiceBus.BackplaneService/App.config
+++ b/SignalR.NServiceBus.BackplaneService/App.config
@@ -1,17 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <configuration>
   <configSections>
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
-    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
-    <section name="Logging" type="NServiceBus.Config.Logging, NServiceBus.Core" />
+    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
+    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core"/>
+    <section name="Logging" type="NServiceBus.Config.Logging, NServiceBus.Core"/>
   </configSections>
 
-  <Logging Threshold="Debug" />
+  <Logging Threshold="Debug"/>
   
   <!--<MessageForwardingInCaseOfFaultConfig 
     ErrorQueue="The queue to which errors will be forwarded." />-->
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
   <!--<UnicastBusConfig 
     DistributorControlAddress="The address for sending control messages to the distributor."
     DistributorDataAddress="The distributor's data address, used as the return address of messages sent by this endpoint."
@@ -28,7 +28,7 @@
     </MessageEndpointMappings>
   </UnicastBusConfig>-->
   <UnicastBusConfig>
-    <MessageEndpointMappings />
+    <MessageEndpointMappings/>
   </UnicastBusConfig>
   <!--<AuditConfig 
     QueueName="The address to which messages received will be forwarded."
@@ -36,13 +36,13 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <assemblyIdentity name="NServiceBus.Core" publicKeyToken="9fc386479f8a226c" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <!--<AuditConfig 
     QueueName="The address to which messages received will be forwarded."
     OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
-  <AuditConfig QueueName="audit" />
-</configuration>
+  <AuditConfig QueueName="audit"/>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
