--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ local.properties
 *.dotCover
 
 ## TODO: If you have NuGet Package Restore enabled, uncomment this
-#packages/
+packages/
 
 # Visual C++ cache files
 ipch/
@@ -76,6 +76,7 @@ ipch/
 # Visual Studio profiler
 *.psess
 *.vsp
+.vs
 
 # ReSharper is a .NET coding add-in
 _ReSharper*
